tests/fixtures/invalid/pow_none_int_float.py
# Cannot call pow() with None, Int, Float
x = pow(None, 1, 1.0)
